facet-python/src/snapshots/facet_python__tests__flatten_preserves_field_docs.snap
---
source: facet-python/src/lib.rs
expression: py
---
class Dims(TypedDict, total=False):
    width: Required[int]
    height: Required[int]

class Image(TypedDict, total=False):
    width: Required[int]
    height: Required[int]
    path: Required[str]
