facet-python/src/snapshots/facet_python__tests__flatten_with_optional_fields.snap
---
source: facet-python/src/lib.rs
expression: py
---
class Meta(TypedDict, total=False):
    description: str
    version: Required[int]

class Package(TypedDict, total=False):
    name: Required[str]
    description: str
    version: Required[int]
