facet-python/src/snapshots/facet_python__tests__flatten_with_rename_all.snap
---
source: facet-python/src/lib.rs
expression: py
---
class Coords(TypedDict, total=False):
    posX: Required[float]
    posY: Required[float]

class Entity(TypedDict, total=False):
    posX: Required[float]
    posY: Required[float]
    label: Required[str]
