facet-python/src/snapshots/facet_python__tests__functional_typed_dict_forward_ref_quoted.snap
---
source: facet-python/src/lib.rs
expression: py
---
Addr = TypedDict(
    "Addr",
    {"from": Required[str], "to": Required["Recipient"]},
    total=False,
)
class Recipient(TypedDict, total=False):
    name: Required[str]
