facet-python/src/snapshots/facet_python__tests__functional_typed_dict_has_type_keyword.snap
---
source: facet-python/src/lib.rs
assertion_line: 1072
expression: py
---
type Bug = TypedDict(
    "Bug",
    {"from": str},
    total=False,
)
