facet-python/src/snapshots/facet_python__tests__hashmap.snap
---
source: facet-python/src/lib.rs
expression: py
---
class Registry(TypedDict, total=False):
    entries: Required[dict[str, int]]
