facet-python/src/snapshots/facet_python__tests__hashmap_with_enum_keys.snap
---
source: facet-python/src/lib.rs
assertion_line: 1028
expression: py
---
Priority = Union[Literal["Low"], Literal["Medium"], Literal["High"]]

class TaskMap(TypedDict, total=False):
    tasks: Required[dict["Priority", str]]
